--- a/.github/workflows/ci-chart.yaml
+++ b/.github/workflows/ci-chart.yaml
@@ -2,10 +2,7 @@ name: CI
 
 on:
   pull_request:
-    paths-ignore:
-      - 'README.md'
-      - 'docs/**'
-      - 'img/**'
+    paths:
       - 'charts/**'
 
 jobs:
