--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,22 @@ on:
       - 'charts/**'
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push images (main)
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: arthurjguerra18/revwallet:${{ github.sha }}
+  
   tests:
+    needs: build
     secrets: inherit
     uses: ./.github/workflows/tests.yaml
