--- a/charts/revwallet-api/values.yaml
+++ b/charts/revwallet-api/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: arthurjguerra18/revwallet
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   tag: v0.6.0
 
 imagePullSecrets: []
