--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build and push images
+name: Build and Push images
 
 on:
   push:
@@ -9,12 +9,7 @@ concurrency:
   group: ${{ github.workflow }}
 
 jobs:
-  tests:
-    secrets: inherit
-    uses: ./.github/workflows/tests.yaml
-
-  build:
-    needs: tests
+  build-and-push-image:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,17 +27,26 @@ jobs:
         run: |
           echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
-      - name: Build and push images (release)
+      - name: Build and push image (release)
         uses: docker/build-push-action@v6
         with:
           push: true
           tags: arthurjguerra18/revwallet:${{ steps.get_tag.outputs.tag }}
 
+  update-helm-values:
+    needs: build-and-push-image
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Update latest tag in Helm values
         run: |
           new_revwallet_api_tag="${{ steps.get_tag.outputs.tag }}"
 
-          echo "Set the RevWallet API image tag to $new_revwallet_api_tag in Helm values.yaml"
+          echo "Set the RevWallet API image tag to $new_revwallet_api_tag in values.yaml"
+          sed -i "s|tag:.*|tag: $new_revwallet_api_tag|" helm/revwallet-api/values.yaml
+
+          echo "Set the RevWallet API image tag to $new_revwallet_api_tag in Charts values.yaml"
           sed -i "s|tag:.*|tag: $new_revwallet_api_tag|" charts/revwallet-api/values.yaml
 
           echo "Set RevWallet API Chart version to $new_revwallet_api_tag"
