--- a/.github/workflows/chart-publish.yaml
+++ b/.github/workflows/chart-publish.yaml
@@ -19,6 +19,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+  
+      - name: Tests K8s
+        uses: ./.github/workflows/k8s-tests.yaml
 
       - name: Configure Git
         run: |
