--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,6 +34,7 @@ jobs:
           tags: arthurjguerra18/revwallet:${{ steps.get_tag.outputs.tag }}
 
   update-helm-values:
+    runs-on: ubuntu-latest
     needs: build-and-push-image
     steps:
       - name: Checkout code
