--- a/charts/revwallet-api/values.yaml
+++ b/charts/revwallet-api/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: arthurjguerra18/revwallet
   pullPolicy: IfNotPresent
-  tag: 
+  tag: v0.7.2
 
 imagePullSecrets: []
 nameOverride: "revwallet-api"
