--- a/.github/workflows/chart-publish.yaml
+++ b/.github/workflows/chart-publish.yaml
@@ -25,7 +25,8 @@ jobs:
 
       - name: Checkout Code
         uses: actions/checkout@v4
-        ref: ${{ steps.get_latest_tag.outputs.latest_tag }}
+        with:
+          ref: ${{ steps.get_latest_tag.outputs.latest_tag }}
 
       - name: Set up Python
         id: python
