--- a/.github/workflows/chart-ci.yaml
+++ b/.github/workflows/chart-ci.yaml
@@ -4,9 +4,10 @@ on:
   pull_request:
     paths:
       - 'charts/**'
+      - '.github/workflows/chart-ci.yaml'
 
 jobs:
-  tests-k8s:
+  chart-ci:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,8 +24,18 @@ jobs:
         run: |
           pip install pipenv
 
-      - name: Deploy API in K8s (CD)
-        run: make create deploy
+      - name: Create K8s clusters
+        run: make create 
+        
+      - name: Deploy Services
+        run: make db prometheus alloy loki grafana
+
+      - name: Deploy RevWallet API (chart from current branch)
+        run: |
+          helm -n revwallet-dev install --values helm/revwallet-api/values.yaml revwallet-api charts/revwallet-api
+          
+      - name: Deploy Nginx
+        run: make nginx
 
       - name: Run tests for K8s
         run: make tests
