--- a/.github/workflows/k8s-ci.yaml
+++ b/.github/workflows/k8s-ci.yaml
@@ -7,6 +7,7 @@ on:
       - 'docs/**'
       - 'img/**'
       - 'charts/**'
+      - '.github/workflows/charts-ci.yaml'
 
 jobs:
   build-and-test:
