--- a/.github/workflows/tf-ci.yaml
+++ b/.github/workflows/tf-ci.yaml
@@ -2,12 +2,9 @@ name: Terraform CI
 
 on:
   pull_request:
-    paths-ignore:
-      - 'README.md'
-      - 'docs/**'
-      - 'img/**'
-      - 'config/**'
-      - '.github/workflows/compose-ci.yaml'
+    paths:
+      - 'terraform/**'
+      - '.github/workflows/tf-ci.yaml'
 
 jobs:
   terraform:
@@ -25,5 +22,3 @@ jobs:
 
       - name: Terraform validate
         run: terraform validate
-
-      # More steps TBD
