--- a/.github/workflows/local-k8s-ci.yaml
+++ b/.github/workflows/local-k8s-ci.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Build image ${{ github.sha }}
         uses: docker/build-push-action@v6
         with:
-          push: true
+          push: false
           tags: arthurjguerra18/revwallet:${{ github.sha }}
       
       - name: Checkout code
@@ -35,7 +35,7 @@ jobs:
         id: python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.12'
 
       - name: Install pipenv
         run: |
