--- a/.github/workflows/local-k8s-ci.yaml
+++ b/.github/workflows/local-k8s-ci.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Build image ${{ github.sha }}
         uses: docker/build-push-action@v6
         with:
-          push: false
+          push: true
           tags: arthurjguerra18/revwallet:${{ github.sha }}
       
       - name: Checkout code
